# tree-sitter-surrealql

./: .cz.toml  .editorconfig  .gitignore  .npmignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CHANGELOG.md  CLUADE.md  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.surql  tree-sitter.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot.yml  publish.yml
bindings/c/: tree-sitter-surrealql.h  tree-sitter-surrealql.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
examples/: alter.surql  begin.surql  break.surql  cancel.surql  commit.surql  continue.surql  create.surql  define_access.surql  define_analzer.surql  define_database.surql  define_event.surql  define_field.surql  define_function.surql  define_index.surql  define_namespace.surql  define_param.surql  define_scope.surql  define_table.surql  define_token.surql  define_user.surql  delete.surql  for.surql  if_else.surql  info.surql  kill.surql  let.surql  live.surql  lower_keywords.surql  rebuild.surql  relate.surql  remove.surql  return.surql  select.surql  select_statements.surql  show.surql  sleep.surql  throw.surql  update.surql  upsert.surql  use.surql
queries/: folds.scm  highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: alter.txt  begin.txt  break.txt  cancel.txt  commit.txt  continue.txt  create.txt  define_access.txt  define_analyzer.txt  define_database.txt  define_event.txt  define_field.txt  define_function.txt  define_index.txt  define_namespace.txt  define_param.txt  define_scope.txt  define_table.txt  delete.txt  (+21 more)
(+3 files in other folders)
