[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-surrealql"
description = "SurrealQL grammar for tree-sitter"
version = "0.2.0"
authors = [{name = "Cellan Hall", email = "hallcellan@gmail.com"}]
keywords = ["incremental", "parsing", "tree-sitter", "surrealql"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.8"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/ce11an/tree-sitter-surrealql"

[project.optional-dependencies]
core = ["tree-sitter~=0.21"]

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
skip = "*-musllinux_aarch64"
build-frontend = "build"
